--- a/design-system.html
+++ b/design-system.html
@@ -9,21 +9,40 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <section class="bg-dark">
+<body class="bg-dark text-white">
+  <section class="container">
     <h1>design system</h1>
 
-    <div class="bg-accent text-dark" style="padding: 1rem">
-      light blue bg, with dark text
-    </div>
+    <section id="colors">
+      <h2><span>01</span> colors</h2>
 
-    <div class="bg-white text-dark" style="padding: 1rem">
-      white bg, with dark text
-    </div>
+      <section class="flex">
+        <article style="flex-grow: 1;">
+          <div class="bg-dark text-white" style="padding: 3rem 1rem 1rem; border: 1px solid white">
+            #0B0D17
+          </div>
+          <p><span class="text-accent">RGB</span> 11, 13, 23</p>
+          <p><span class="text-accent">HSL</span> 230°, 35%, 7%</p>
+        </article>
+  
+        <article style="flex-grow: 1;">
+          <div class="bg-accent text-dark" style="padding: 3rem 1rem 1rem; border: 1px solid white">
+            #0B0D17
+          </div>
+          <p><span class="text-accent">RGB</span> 208, 214, 249</p>
+          <p><span class="text-accent">HSL</span> 231°, 77%, 90%</p>
+        </article>
+  
+        <article style="flex-grow: 1;">
+          <div class="bg-white text-dark" style="padding: 3rem 1rem 1rem; border: 1px solid white">
+            #FFFFFF
+          </div>
+          <p><span class="text-accent">RGB</span> 255, 255, 255</p>
+          <p><span class="text-accent">HSL</span> 0°, 0%, 100%</p>
+        </article>
+      </section>
 
-    <div class="bg-accent-alpha text-white" style="padding: 1rem">
-      light blue bg with a 20% alpha and white text
-    </div>
+    </section>
 
   </section>
 </body>
